# glc

./: .gitignore  pyproject.toml
glc/: cli.py  tui.py
