[project]
name = "glc"
version = "0.1.0"
description = "GitLab CI/CD variables manager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer",
    "requests",
]

[project.scripts]
glc = "glc.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
