[project]
name = "glc"
version = "0.2.2"
description = "GitLab CI/CD variables manager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer",
    "requests",
    "textual",
    "bump-my-version>=1.2.7",
]

[project.scripts]
glc = "glc.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.bumpversion]
current_version = "0.2.2"
commit = true
tag = true
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
